Correcting small menu layout problem with underline
git-svn-id: svn://svn.webtrees.net/trunk@5548 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/ocean/style.css
+++ b/phpGedView/themes/ocean/style.css
@@ -575,7 +575,6 @@ a:hover .nameZoom {
 
 .submenuitem_hover, .submenuitem_hover_rtl {
 	color: black;
-	text-decoration: underline;
 	font: 11px tahoma, arial, helvetica, sans-serif;
 	background-color: #c1dfff;
 	white-space: nowrap;
