--- a/phpGedView/themes/standard/style.css
+++ b/phpGedView/themes/standard/style.css
@@ -570,7 +570,6 @@ a:hover .nameZoom {
 
 .submenuitem_hover, .submenuitem_hover_rtl {
 	color: black;
-	text-decoration: underline;
 	font: 11px tahoma, arial, helvetica, sans-serif;
 	background-color: #e6f0fa;
 	white-space: nowrap;
